2006-04-23  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* *: Initial import inside gnome-utils.

2006-04-22  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-utils.c: fixed bug on deleting files

2006-04-21  Fabio Marzocca  <thesaltydog@gmail.com>

	* configure.ac:

        Bumped post-release version

2006-04-21  Fabio Marzocca  <thesaltydog@gmail.com>

	* Makefile.am:
	* NEWS:
	* configure.ac:
   
        Released v.2.4.1

2006-04-21  Fabio Marzocca  <thesaltydog@gmail.com>

	* baobab.glade:
	* po/it.po:
	* src/baobab-treeview.c: 
	* src/baobab-utils.c: 
	* src/baobab-utils.h:
	* src/baobab.c: 
	* src/callbacks.c: 
	* src/callbacks.h:

	Added treemap item in View Menu

2006-04-21  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/Makefile.am:
	* src/baobab-scan.c: moved hardlinks.c here
	* src/baobab-scan.h: move hardlinks.h here

2006-04-21  Fabio Marzocca  <thesaltydog@gmail.com>

	* po/POTFILES.in:
	* po/POTFILES.skip:
	* src/Makefile.am:
	* src/baobab-prefs.c: renamed from props.c
	* src/baobab-prefs.h: renamed from props.h
	* src/baobab.c:
	* src/callbacks.c:

2006-04-21  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab.c:
	* src/callbacks.c:
	* src/baobab-utils.c:

	factor out a set_busy method and cache the animation pixbufs.

2006-04-21  Paolo Borelli  <pborelli@katamail.com>

	* pixmaps/Makefile.am:
	* baobab.glade:
	* src/baobab.c:
	* src/callbacks.c:
	* src/baobab-utils.c:

	Make app icon themable

2006-04-20  Paolo Borelli  <pborelli@katamail.com>

	* src/callbacks.c:
	* src/tv.c: move tv callbacks here.
	* src/baobab_globals.[ch]: remove
	* src/baobab-utils.[ch]: renamed from bb_util
	* src/baobab-scan.[ch]: renamed from bbthread
	* src/baobab-treeview.[ch]: renamed from tv
	* src/baobab-graphwin.[ch]: renamed from bb_graphwin

2006-04-20  Fabio Marzocca  <thesaltydog@gmail.com>

	* MAINTAINERS:
	* src/callbacks.c: (on_about1_activate):

	Updated maintainers

2006-04-20  Paolo Borelli  <pborelli@katamail.com>
